added rate limiting in bottom corner

--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -78,3 +78,16 @@ textarea {
 #downloadButton {
 	text-align: center;
 }
+
+#rateLimit{
+	color: grey;
+	font-size: 18px;
+	position: absolute;
+	bottom: 15px;
+	right: 15px;
+	margin: 0;
+
+	span{
+		font-size: 25px;
+	}
+}
