--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -67,3 +67,14 @@ textarea {
 #downloadButton {
   text-align: center;
 }
+#rateLimit {
+  color: grey;
+  font-size: 18px;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  margin: 0;
+}
+#rateLimit span {
+  font-size: 25px;
+}
