added layout for user page :person_with_blond_hair:

--- a/src/css/userpage.css
+++ b/src/css/userpage.css
@@ -6,28 +6,114 @@
 }
 #userPage #left {
   display: flex;
+  flex-direction: column;
+  flex: 3;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+#userPage #left #userData {
+  display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 100%;
 }
-#userPage #left img {
-  width: 200px;
-  height: 200px;
+#userPage #left #userData img {
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
+  margin-right: 20px;
+  border: 10px solid lightblue;
 }
-#userPage #left #userText {
-  font-size: 20px;
+#userPage #left #userData #userText {
+  width: 100%;
+  font-size: 15px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-#userPage #left #userText p {
+#userPage #left #userData #userText .userInfos {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+#userPage #left #userData #userText .userInfos .userInfo {
+  padding: 0 10px;
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+#userPage #left #userData #userText .userInfos svg {
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+#userPage #left #userData #userText h1 {
+  margin: 0 auto;
+  padding: 0;
+}
+#userPage #left #userData #userText h2 {
+  margin: 0 auto;
+  color: #b4b4b4;
+}
+#userPage #left #userData #userText h2 a {
+  text-decoration: none;
+  color: inherit;
+}
+#userPage #left #userData #userText h2 a:hover {
+  border-bottom: 3px solid #b4b4b4;
+}
+#userPage #left #userData #userText #userStats {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+}
+#userPage #left #userData #userText #userStats .userStat {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px;
+  padding: 10px 0;
+  border-radius: 10px;
+  width: 100px;
+  text-align: center;
+  border: 3px solid lightblue;
+}
+#userPage #left #userData #userText #userStats .userStat span {
+  font-size: 20px;
+  font-weight: bold;
+}
+#userPage #left #userData #userText p {
   margin-bottom: 5px;
 }
-#userPage #left #userText p span {
+#userPage #left #userData #userText p span {
   font-weight: bold;
 }
 #userPage #right {
-  width: 50%;
+  flex: 2;
   justify-content: center;
   align-items: center;
   display: flex;
+  flex-direction: column;
+}
+#userPage #right #githubCards {
+  height: 80vh;
+  overflow-x: scroll;
+  margin: 10px;
+  padding: 0 10px;
+}
+#userPage #right #githubCards .ghCard {
+  margin-top: 10px;
+}
+/* scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: grey;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: lightslategrey;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
