looks better left aligned :sparkles:

--- a/src/less/userpage.less
+++ b/src/less/userpage.less
@@ -30,18 +30,16 @@
 				font-size: 15px;
 				display: flex;
 				flex-direction: column;
-				align-items: center;
+				padding-left: 20px;
 				justify-content: center;
 
 				.userInfos{
 
 					display: flex;
 					flex-direction: row;
-					align-items: center;
-					justify-content: center;
 
 					.userInfo{
-						padding: 0 10px;
+						padding-right: 20px;
 						display: inline-block;
 						vertical-align: text-bottom;
 					}
@@ -53,12 +51,11 @@
 				}
 	
 				h1{
-					margin: 0 auto;
 					padding: 0;
 				}
 
 				h2{
-					margin: 0 auto;
+					margin: 0;
 					color: rgb(180,180,180);
 					a{
 						text-decoration: none;
@@ -71,15 +68,14 @@
 
 				#userStats{
 					display: flex;
-					align-items: center;
-					justify-content: center;
-					padding-top: 10px;
+					padding-top: 20px;
+					padding-bottom: 10px;
 					
 					.userStat{
 						display: flex;
 						flex-direction: column;
 						background-color: rgba(255, 255, 255, 0.2);
-						margin: 0 10px;
+						margin-right: 20px;
 						padding: 10px 0;
 						border-radius: 10px;
 						width: 100px;
