--- a/src/css/userpage.css
+++ b/src/css/userpage.css
@@ -28,17 +28,15 @@
   font-size: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding-left: 20px;
   justify-content: center;
 }
 #userPage #left #userData #userText .userInfos {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
 }
 #userPage #left #userData #userText .userInfos .userInfo {
-  padding: 0 10px;
+  padding-right: 20px;
   display: inline-block;
   vertical-align: text-bottom;
 }
@@ -47,11 +45,10 @@
   vertical-align: text-bottom;
 }
 #userPage #left #userData #userText h1 {
-  margin: 0 auto;
   padding: 0;
 }
 #userPage #left #userData #userText h2 {
-  margin: 0 auto;
+  margin: 0;
   color: #b4b4b4;
 }
 #userPage #left #userData #userText h2 a {
@@ -63,15 +60,14 @@
 }
 #userPage #left #userData #userText #userStats {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 10px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 #userPage #left #userData #userText #userStats .userStat {
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.2);
-  margin: 0 10px;
+  margin-right: 20px;
   padding: 10px 0;
   border-radius: 10px;
   width: 100px;
