--- a/src/less/userpage.less
+++ b/src/less/userpage.less
@@ -48,6 +48,14 @@
 						vertical-align: text-bottom;
 					}
 
+					a{
+						color: white;
+						text-decoration: none;
+					}
+
+					a:hover{
+						color: lightgrey;				}
+
 				}
 	
 				h1{
