--- a/src/less/userpage.less
+++ b/src/less/userpage.less
@@ -24,7 +24,7 @@
 				margin-right: 20px;
 				border: 10px solid lightblue;
 			}
-	
+
 			#userText{
 				width: 100%;
 				font-size: 15px;
@@ -54,7 +54,8 @@
 					}
 
 					a:hover{
-						color: lightgrey;				}
+						color: lightgrey;
+					}
 
 				}
 	
