moved rate limiting to top right corner :ram:

--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -82,8 +82,8 @@ textarea {
 #rateLimit{
 	color: grey;
 	font-size: 18px;
-	position: absolute;
-	bottom: 15px;
+	position: fixed;
+	top: 15px;
 	right: 15px;
 	margin: 0;
 
