--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -70,8 +70,8 @@ textarea {
 #rateLimit {
   color: grey;
   font-size: 18px;
-  position: absolute;
-  bottom: 15px;
+  position: fixed;
+  top: 15px;
   right: 15px;
   margin: 0;
 }
