--- a/src/css/userpage.css
+++ b/src/css/userpage.css
@@ -91,21 +91,22 @@
 #userPage #left #userData #userText p span {
   font-weight: bold;
 }
-#userPage #right {
-  flex: 2;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-#userPage #right #githubCards {
-  height: 80vh;
-  overflow-x: scroll;
+#userPage #left #bottomSection #githubCards {
   margin: 10px;
   padding: 0 10px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  max-height: 500px;
+  overflow-x: scroll;
 }
-#userPage #right #githubCards .ghCard {
-  margin-top: 10px;
+#userPage #left #bottomSection #githubCards .ghCard {
+  margin: 10px;
+  padding: 0;
+  height: max-content;
+}
+#userPage #left #bottomSection #githubCards > div {
+  margin: 0;
+  padding: 0;
 }
 /* scrollbar */
 ::-webkit-scrollbar {
