--- a/src/less/userpage.less
+++ b/src/less/userpage.less
@@ -110,28 +110,31 @@
 				}
 			}
 		}	
-	}
 
-	#right{
-		flex: 2;
-		justify-content: center;
-		align-items: center;
-		display: flex;
-		flex-direction: column;
-	
-		#githubCards{
-			height: 80vh;
-			overflow-x: scroll;
-			margin: 10px;
-			padding: 0 10px;
+		#bottomSection{
 			
-			.ghCard{
-				margin-top: 10px;
+			#githubCards{
+				margin: 10px;
+				padding: 0 10px;
+				display: inline-flex;
+				flex-wrap: wrap;
+				max-height: 500px;
+				overflow-x: scroll;
+				
+				.ghCard{
+					margin: 10px;
+					padding: 0;
+					height: max-content;
+				}
 			}
+
+			#githubCards > div{
+				margin: 0;
+				padding: 0;
+			}
+
 		}
-
 	}
-
 }
 
 
