--- a/src/css/userpage.css
+++ b/src/css/userpage.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  padding-left: 20px;
 }
 #userPage #left #userData img {
   width: 300px;
@@ -91,6 +92,13 @@
 #userPage #left #userData #userText p span {
   font-weight: bold;
 }
+#userPage #left #bottomSection input {
+  font-size: 20px;
+  width: fit-content;
+  margin-left: 30px;
+  margin-top: 20px;
+  text-align: left;
+}
 #userPage #left #bottomSection #githubCards {
   margin: 10px;
   padding: 0 10px;
@@ -120,4 +128,7 @@
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
+}
+#notFoundError {
+  color: white;
 }
