--- a/src/less/userpage.less
+++ b/src/less/userpage.less
@@ -16,6 +16,7 @@
 			display: flex;
 			flex-direction: row;
 			width: 100%;
+			padding-left: 20px;
 
 			img{
 				width: 300px;
@@ -113,6 +114,14 @@
 
 		#bottomSection{
 			
+			input{
+				font-size: 20px;
+				width: fit-content;
+				margin-left: 30px;
+				margin-top: 20px;
+				text-align: left;
+			}
+
 			#githubCards{
 				margin: 10px;
 				padding: 0 10px;
@@ -151,4 +160,8 @@
 
 ::-webkit-scrollbar-corner{
 	background: transparent
+}
+
+#notFoundError{
+	color: white;
 }
