--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,23 @@
 @import url(./css/homepage.css);
-@import url(./css/userpage.css)
+@import url(./css/userpage.css);
+@import url(./css/repopage.css);
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: grey;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: lightslategrey;
+}
+
+::-webkit-scrollbar-corner {
+	background: transparent
+}
+
+#notFoundError {
+	color: white;
+}
