--- a/src/css/repopage.css
+++ b/src/css/repopage.css
@@ -78,11 +78,18 @@
 }
 #repoPage #left #chart #chartLabels {
   padding-top: 10px;
-  text-align: center;
   width: 100%;
   position: relative;
   top: -50%;
-  transform: translate(0, -50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#repoPage #left #chart #chartLabels div {
+  width: fit-content;
 }
 #repoPage #left #githubCards {
   margin: 10px;
