--- a/src/less/repopage.less
+++ b/src/less/repopage.less
@@ -96,11 +96,20 @@
 
 			#chartLabels{
 				padding-top: 10px;
-				text-align: center;
 				width: 100%;
 				position: relative;
 				top: -50%;
-				transform: translate(0, -50%);
+				left: 50%;
+				transform: translate(-50%, -50%);
+
+				width: fit-content;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+
+				div{
+					width: fit-content;
+				}
 			}
 
 		}
