--- a/src/less/repopage.less
+++ b/src/less/repopage.less
@@ -2,7 +2,6 @@
 	color: white;
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
 	
 	#left{
 		display: flex;
@@ -12,107 +11,154 @@
 		padding-top: 20px;
 		
 		#title{
-			
-			svg{
-				display: inline-block;
-				vertical-align: text-bottom;
-			}
 
-			.info{
-				padding-right: 20px;
-				padding-bottom: 20px;
-				margin: 0;
-				display: inline-block;
-				vertical-align: text-bottom;
-			}
+			#titleleft{
 
-			h1{
-				padding: 0;
-			}
+				padding-right: 50px;
 
-			h2{
-				color: lightgrey;
-				a{
+				h1{
+					padding: 0;
+				}
+	
+				h2{
 					color: lightgrey;
+					a{
+						color: lightgrey;
+						text-decoration: none;
+					}
+		
+					a:hover{
+						color: lightgrey;
+						border-bottom: 3px solid lightgrey;
+					}
+				}
+				
+				a{
+					color: white;
 					text-decoration: none;
 				}
 	
 				a:hover{
 					color: lightgrey;
-					border-bottom: 3px solid lightgrey;
 				}
 			}
-			
-			a{
-				color: white;
-				text-decoration: none;
-			}
 
-			a:hover{
-				color: lightgrey;
-			}
+			#titleright{
 
-			#stats{
-				display: flex;
-				padding-top: 10px;
-				padding-bottom: 10px;
-				
-				.stat{
+				svg{
+					display: inline-block;
+					vertical-align: text-bottom;
+				}
+	
+				.info{
+					padding-right: 20px;
+					padding-bottom: 20px;
+					margin: 0;
+					display: inline-block;
+					vertical-align: text-bottom;
+				}
+	
+	
+				#stats{
 					display: flex;
-					flex-direction: column;
-					background-color: rgba(255, 255, 255, 0.2);
-					margin-right: 20px;
-					padding: 10px 0;
-					border-radius: 10px;
-					width: 100px;
-					text-align: center;
-					border: 3px solid lightblue;
-
-					span{
-						font-size: 20px;
-						font-weight: bold;
+					padding-top: 10px;
+					padding-bottom: 10px;
+					
+					.stat{
+						display: flex;
+						flex-direction: column;
+						background-color: rgba(255, 255, 255, 0.2);
+						margin-right: 20px;
+						padding: 10px 0;
+						border-radius: 10px;
+						width: 100px;
+						text-align: center;
+						border: 3px solid lightblue;
+	
+						span{
+							font-size: 20px;
+							font-weight: bold;
+						}
 					}
 				}
-
 			}
-
-			.language{
-				font-weight: bold;
-				font-size: 15px;
-				margin-left: 10px;
-			}
-
 		}
 
-		#chart{
+		#bottom{
 
-			width: 350px;
-			height: 350px;
+			display: flex;
+			flex-direction: row;
+			height: 450px;
 
 			#chartContainer{
-				height: 350px;
-				width: 350px;
-			}
-
-			#chartLabels{
-				padding-top: 10px;
-				width: 100%;
-				position: relative;
-				top: -50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-
-				width: fit-content;
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-
-				div{
-					width: fit-content;
+				h2{
+					margin-bottom: 0;
 				}
 			}
 
+			#chart{
+			
+				width: 350px;
+				height: 350px;
+			
+				#chartContainer{
+					height: 350px;
+					width: 350px;
+				}
+			
+				#chartLabels{
+					padding-top: 10px;
+					width: 100%;
+					position: relative;
+					top: -50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+			
+					width: fit-content;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+			
+					div{
+						width: fit-content;
+					}
+				}
+			
+			}
+
+			#contributors{
+				padding-left: 20px;
+				min-width: 300px;
+
+				#contributorList{
+					overflow-y: scroll;
+					height: 250px;
+				}
+
+				a{
+					color: white;
+					text-decoration: none;
+					font-size: 20px;
+					margin-bottom: 10px;
+					
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+				}
+
+				img{
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					border: 2px solid lightblue;
+				}
+
+				span{
+					padding-bottom: 5px;
+				}
+			}
 		}
+
 
 		#githubCards{
 			margin: 10px;
@@ -134,4 +180,9 @@
 			padding: 0;
 		}
 	}
+}
+
+.customGraphLabel{
+	width: 50px;
+	height: 50px;
 }
