--- a/src/less/repopage.less
+++ b/src/less/repopage.less
@@ -1,188 +1,196 @@
 #repoPage{
 	color: white;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	flex: 3;
+	padding-left: 40px;
+	padding-top: 20px;
 	
-	#left{
+	#title{
+		
 		display: flex;
-		flex-direction: column;
-		flex: 3;
-		padding-left: 40px;
-		padding-top: 20px;
-		
-		#title{
+		flex: row;
+		padding-right: 50px;
 
-			#titleleft{
-
-				padding-right: 50px;
-
-				h1{
-					padding: 0;
-				}
-	
-				h2{
-					color: lightgrey;
-					a{
-						color: lightgrey;
-						text-decoration: none;
-					}
-		
-					a:hover{
-						color: lightgrey;
-						border-bottom: 3px solid lightgrey;
-					}
-				}
-				
-				a{
-					color: white;
-					text-decoration: none;
-				}
-	
-				a:hover{
-					color: lightgrey;
-				}
-			}
-
-			#titleright{
-
-				svg{
-					display: inline-block;
-					vertical-align: text-bottom;
-				}
-	
-				.info{
-					padding-right: 20px;
-					padding-bottom: 20px;
-					margin: 0;
-					display: inline-block;
-					vertical-align: text-bottom;
-				}
-	
-	
-				#stats{
-					display: flex;
-					padding-top: 10px;
-					padding-bottom: 10px;
-					
-					.stat{
-						display: flex;
-						flex-direction: column;
-						background-color: rgba(255, 255, 255, 0.2);
-						margin-right: 20px;
-						padding: 10px 0;
-						border-radius: 10px;
-						width: 100px;
-						text-align: center;
-						border: 3px solid lightblue;
-	
-						span{
-							font-size: 20px;
-							font-weight: bold;
-						}
-					}
-				}
-			}
-		}
-
-		#bottom{
-
-			display: flex;
-			flex-direction: row;
-			height: 450px;
-
-			#chartContainer{
-				h2{
-					margin-bottom: 0;
-				}
-			}
-
-			#chart{
-			
-				width: 350px;
-				height: 350px;
-			
-				#chartContainer{
-					height: 350px;
-					width: 350px;
-				}
-			
-				#chartLabels{
-					padding-top: 10px;
-					width: 100%;
-					position: relative;
-					top: -50%;
-					left: 50%;
-					transform: translate(-50%, -50%);
-			
-					width: fit-content;
-					display: flex;
-					flex-direction: column;
-					align-items: center;
-			
-					div{
-						width: fit-content;
-					}
-				}
-			
-			}
-
-			#contributors{
-				padding-left: 20px;
-				min-width: 300px;
-
-				#contributorList{
-					overflow-y: scroll;
-					height: 250px;
-				}
-
-				a{
-					color: white;
-					text-decoration: none;
-					font-size: 20px;
-					margin-bottom: 10px;
-					
-					display: flex;
-					flex-direction: row;
-					align-items: center;
-				}
-
-				img{
-					width: 50px;
-					height: 50px;
-					border-radius: 50%;
-					border: 2px solid lightblue;
-				}
-
-				span{
-					padding-bottom: 5px;
-				}
-			}
-		}
-
-
-		#githubCards{
-			margin: 10px;
-			padding: 0 10px;
-			display: inline-flex;
-			flex-wrap: wrap;
-			max-height: 500px;
-			overflow-x: scroll;
-			
-			.ghCard{
-				margin: 10px;
-				padding: 0;
-				height: max-content;
-			}
-		}
-
-		#githubCards > div{
-			margin: 0;
+		h1{
 			padding: 0;
 		}
-	}
-}
 
-.customGraphLabel{
-	width: 50px;
-	height: 50px;
+		h2{
+			color: lightgrey;
+			a{
+				color: lightgrey;
+				text-decoration: none;
+			}
+
+			a:hover{
+				color: lightgrey;
+				border-bottom: 3px solid lightgrey;
+			}
+		}
+		
+		a{
+			color: white;
+			text-decoration: none;
+		}
+
+		a:hover{
+			color: lightgrey;
+		}
+
+
+
+			svg{
+				display: inline-block;
+				vertical-align: text-bottom;
+			}
+
+			.info{
+				padding-right: 20px;
+				padding-bottom: 20px;
+				margin: 0;
+				display: inline-block;
+				vertical-align: text-bottom;
+			}
+
+
+			#stats{
+				display: flex;
+				padding-top: 10px;
+				padding-bottom: 10px;
+				flex-direction: row;
+				padding-left: 40px;
+				
+				.stat{
+					display: flex;
+					flex-direction: column;
+					background-color: rgba(255, 255, 255, 0.2);
+					margin-right: 20px;
+					padding: 10px 0;
+					border-radius: 10px;
+					width: 100px;
+					height: fit-content;
+					text-align: center;
+					border: 3px solid lightblue;
+
+					span{
+						font-size: 20px;
+						font-weight: bold;
+					}
+				}
+		}
+	}
+
+	#buttons{
+		.stateButton{
+			font-size: 20px;
+			outline: none;
+			border: 2px solid lightblue;
+			background-color: rgba(255, 255, 255, 0.2);
+			color: white;
+			margin-right: 10px;
+			padding: 5px 20px;
+			border-radius: 10px;
+		}
+
+		.active{
+			background-color: lightblue;
+			color: black;
+		}
+	}
+
+	#dataPage{
+		display: flex;
+		flex-direction: row;
+		height: 450px;
+
+		#chartContainer{
+			h2{
+				margin-bottom: 0;
+			}
+		}
+
+		#chart{
+		
+			width: 350px;
+			height: 350px;
+		
+			#chartContainer{
+				height: 350px;
+				width: 350px;
+			}
+		
+			#chartLabels{
+				padding-top: 10px;
+				width: 100%;
+				position: relative;
+				top: -50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+		
+				width: fit-content;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+		
+				div{
+					width: fit-content;
+				}
+			}
+		
+		}
+
+		#contributors{
+			padding-left: 20px;
+			min-width: 300px;
+
+			#contributorList{
+				overflow-y: scroll;
+				height: 250px;
+			}
+
+			a{
+				color: white;
+				text-decoration: none;
+				font-size: 20px;
+				margin-bottom: 10px;
+				
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+			}
+
+			img{
+				width: 50px;
+				height: 50px;
+				border-radius: 50%;
+				border: 2px solid lightblue;
+			}
+
+			span{
+				padding-bottom: 5px;
+			}
+		}
+	}
+
+
+	// #githubCards{
+	// 	margin: 10px;
+	// 	padding: 0 10px;
+	// 	display: inline-flex;
+	// 	flex-wrap: wrap;
+	// 	max-height: 500px;
+	// 	overflow-x: scroll;
+		
+	// 	.ghCard{
+	// 		margin: 10px;
+	// 		padding: 0;
+	// 		height: max-content;
+	// 	}
+	// }
+
+	// #githubCards > div{
+	// 	margin: 0;
+	// 	padding: 0;
+	// }
 }
