--- a/src/less/repopage.less
+++ b/src/less/repopage.less
@@ -38,46 +38,18 @@
 			color: lightgrey;
 		}
 
+		span{
 
+			margin-right: 15px;
 
 			svg{
 				display: inline-block;
 				vertical-align: text-bottom;
 			}
+		}
 
-			.info{
-				padding-right: 20px;
-				padding-bottom: 20px;
-				margin: 0;
-				display: inline-block;
-				vertical-align: text-bottom;
-			}
-
-
-			#stats{
-				display: flex;
-				padding-top: 10px;
-				padding-bottom: 10px;
-				flex-direction: row;
-				padding-left: 40px;
-				
-				.stat{
-					display: flex;
-					flex-direction: column;
-					background-color: rgba(255, 255, 255, 0.2);
-					margin-right: 20px;
-					padding: 10px 0;
-					border-radius: 10px;
-					width: 100px;
-					height: fit-content;
-					text-align: center;
-					border: 3px solid lightblue;
-
-					span{
-						font-size: 20px;
-						font-weight: bold;
-					}
-				}
+		.info{
+			line-height: 25px;
 		}
 	}
 
