--- a/src/less/userpage.less
+++ b/src/less/userpage.less
@@ -143,4 +143,33 @@
 
 		}
 	}
+
+	#stackedBarChart{
+		display: flex;
+		flex-direction: row;
+		width: 350px;
+		margin-top: 10px;
+		border-radius: 4px;
+		overflow: hidden;
+		height: 8px;
+		transition: 0.5s;
+		span{
+			height: 100%;
+
+			.languageTitle{
+				display: none;
+				padding: 2px 5px;
+			}
+		}
+	}
+
+	#stackedBarChart:hover{
+		height: 24px;
+		width: fit-content;
+
+		.languageTitle{
+			display: inherit;
+		}
+	}
+
 }
