cleaned up repopage styling :sparkles:

--- a/src/less/repopage.less
+++ b/src/less/repopage.less
@@ -86,18 +86,19 @@
 		justify-content: center;
 		
 		h2{
-			text-align: center;
+			font-size: 30px;
+			border-bottom: 3px dashed grey;
+			width: fit-content;
+			padding-bottom: 3px;
 		}
 
 		.dataCard{
-			background-color: rgb(200,200,200);
-			border-radius: 40px;
+			background-color: white;
+			border-radius: 5px;
+			box-shadow: 0 0 20px black;
 			color: black;
 			height: 100%;
 			margin: 20px;
-		}
-
-		#languageCard{
 			display: flex;
 			align-items: center;
 			flex-direction: column;
@@ -141,6 +142,7 @@
 			#contributorList{
 				overflow-y: scroll;
 				height: 350px;
+				width: 80%;
 			}
 
 			a{
