--- a/src/css/repopage.css
+++ b/src/css/repopage.css
@@ -70,16 +70,18 @@
   justify-content: center;
 }
 #repoPage #dataPage h2 {
-  text-align: center;
+  font-size: 30px;
+  border-bottom: 3px dashed grey;
+  width: fit-content;
+  padding-bottom: 3px;
 }
 #repoPage #dataPage .dataCard {
-  background-color: #c8c8c8;
-  border-radius: 40px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 20px black;
   color: black;
   height: 100%;
   margin: 20px;
-}
-#repoPage #dataPage #languageCard {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -115,6 +117,7 @@
 #repoPage #dataPage #contributors #contributorList {
   overflow-y: scroll;
   height: 350px;
+  width: 80%;
 }
 #repoPage #dataPage #contributors a {
   color: black;
