--- a/src/less/repopage.less
+++ b/src/less/repopage.less
@@ -93,10 +93,8 @@
 		}
 
 		.dataCard{
-			background-color: white;
+			border: 5px dashed lightblue;
 			border-radius: 5px;
-			box-shadow: 0 0 20px black;
-			color: black;
 			height: 100%;
 			margin: 20px;
 			display: flex;
@@ -146,7 +144,7 @@
 			}
 
 			a{
-				color: black;
+				color: white;
 				text-decoration: none;
 				font-size: 20px;
 				margin-bottom: 10px;
@@ -157,7 +155,7 @@
 			}
 
 			a:hover{
-				color: grey;
+				color: lightgrey;
 			}
 
 			img{
