--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -14,7 +14,7 @@ h1 {
   margin: 0;
   padding-bottom: 20px;
 }
-input {
+input[type='text'] {
   background-color: rgba(255, 255, 255, 0.2);
   outline: none;
   border: none;
@@ -26,7 +26,7 @@ input {
   text-align: center;
   margin: auto;
 }
-input::placeholder {
+input[type='text']::placeholder {
   color: lightgray;
 }
 #homepage {
