--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -18,7 +18,7 @@ h1 {
 	padding-bottom: 20px;
 }
 
-input {
+input[type='text'] {
 	background-color: rgba(255, 255, 255, 0.2);
 	outline: none;
 	border: none;
@@ -31,7 +31,7 @@ input {
 	margin: auto;
 }
 
-input::placeholder {
+input[type='text']::placeholder {
 	color: lightgray
 }
 
